crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_boolean_works-1.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::True,
    errbuf: "NULL",
    errbuf_size: 0,
}
