crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_null_works.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::Null,
    errbuf: "NULL",
    errbuf_size: 0,
}
