crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_number_works--123-0.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::Number(Integer(-123)),
    errbuf: "NULL",
    errbuf_size: 0,
}
