crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_number_works-nan-0.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::Number(Number("nan")),
    errbuf: "NULL",
    errbuf_size: 0,
}
