crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_start_and_end_array_works-3.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::Array([Value::Null]),
    errbuf: "NULL",
    errbuf_size: 0,
}
