crates/yajlir2/src/tree/snapshots/yajl__tree__tests__handle_start_and_end_map_works.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: StackElem {
        key: "NULL",
        value: Value::Object({}),
        next: "NULL",
    },
    root: "NULL",
    errbuf: "NULL",
    errbuf_size: 0,
}
